--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,11 @@
 {
   "name": "job_list",
   "app_id": "",
-  "type": "ionic-angular"
+  "type": "ionic-angular",
+  "proxies": [
+    {
+      "path": "/api",
+      "proxyUrl": "http://api.indeed.com/ads/"
+    }
+  ]
 }
